@@ -1,3 +1,8 @@
+2014-06-19  Tobias Burnus  <burnus@net-b.de>
+
+	* trans-intrinsic.c (conv_co_minmaxsum): Fix argument
+	passing.
+
 2014-06-18  Tobias Burnus  <burnus@net-b.de>
 
 	* gfortran.texi (OpenMP): Update refs to OpenMP 4.0.
